tests/snapshots/onboarding_examples_learn__examples_list.snap
---
source: tests/onboarding_examples_learn.rs
expression: list
---
{
  "examples": [
    {
      "description": "SPL token minting starter with a faucet-style UX.",
      "est_minutes": 8,
      "name": "token-faucet",
      "tags": [
        "token",
        "spl",
        "beginner"
      ],
      "title": "Token Faucet"
    },
    {
      "description": "Metaplex NFT collection starter for devnet demos.",
      "est_minutes": 10,
      "name": "nft-collection",
      "tags": [
        "nft",
        "metaplex",
        "devnet"
      ],
      "title": "NFT Collection"
    },
    {
      "description": "Two-party escrow skeleton focused on account flow.",
      "est_minutes": 12,
      "name": "escrow",
      "tags": [
        "pda",
        "cpi",
        "intermediate"
      ],
      "title": "Escrow"
    },
    {
      "description": "Proposal and voting starter for governance prototypes.",
      "est_minutes": 10,
      "name": "voting-dao",
      "tags": [
        "dao",
        "governance",
        "crud"
      ],
      "title": "Voting DAO"
    },
    {
      "description": "CRUD dApp starter built from the Phase 5 blog recipe.",
      "est_minutes": 7,
      "name": "blog-crud",
      "tags": [
        "blog",
        "crud",
        "frontend"
      ],
      "title": "Blog CRUD"
    }
  ],
  "ok": true
}
