tests/snapshots/onboarding_examples_learn__learn_missing_topic_error.snap
---
source: tests/onboarding_examples_learn.rs
expression: payload
---
{
  "error": "invalid input: unknown learn topic `missing-topic`; run `sunscreen learn`",
  "exit_code": 4,
  "kind": "user_input",
  "next_step": "run the same command with `--help`"
}
