tests/snapshots/onboarding_examples_learn__learn_pda.snap
---
source: tests/onboarding_examples_learn.rs
expression: pda
---
{
  "body": "# Program Derived Addresses\n\nA PDA is an address a Solana program can sign for through deterministic seeds.\nIn sunscreen recipes, seeds show up in generated account constraints so a\nresource can live at a predictable address.\n",
  "est_minutes": 6,
  "ok": true,
  "prereqs": [
    "accounts-model"
  ],
  "title": "Program Derived Addresses",
  "topic": "pda"
}
